# podly_pure_podcasts

./: .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTAINER_STATS.md  Cargo.toml  DECISIONS.md  Dockerfile  PARITY_AUDIT_REPORT.md  PR_REVIEW.md  index.html  pyproject.lite.toml  pyproject.toml  rust-rewrite-progress.html  rust-rewrite.html  the-plan.md
.github/workflows/: lint-and-format.yml
docs/: MIGRATION_ASSESSMENT.md  NON_UPSTREAM_FEATURES.md  PARITY_STATUS.md  contributors.md  ina-diarization.md  migration-flatten-plan.md  rust-rewrite-progress-v1.html  rust-rewrite-progress.html  rust-rewrite.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChapterProcessingStats.tsx  DiagnosticsModal.tsx  DownloadButton.tsx  FeedDetail.tsx  FeedList.tsx  FeedSettingsModal.tsx  LLMProcessingStats.tsx  ProcessingStatsButton.tsx  ReprocessButton.tsx  TimestampModeToggle.tsx
frontend/src/components/config/: ConfigContext.tsx  ConfigTabs.tsx
frontend/src/components/config/sections/: AppSection.tsx  index.ts  (+3 more)
frontend/src/contexts/: TimestampModeContext.tsx  timestampModeContextValue.ts
frontend/src/hooks/: useConfigState.ts  useTimestampFormatter.ts  useTimestampMode.ts
frontend/src/pages/: HomePage.tsx  JobsPage.tsx  LandingPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: timestamp.ts
migrations/: 001_initial.sql
prompts/: oneshot_system_prompt.txt
scripts/: check_integration_workflow.py  ci.sh  generate_lockfiles.sh
src/: config.rs  enriched_oneshot_system_prompt.txt  enriched_oneshot_user_prompt.jinja  error.rs  llm.rs  main.rs
src/api/: auth.rs  billing.rs  config.rs  discord.rs  feeds.rs  jobs.rs  mod.rs  posts.rs
src/app/: __init__.py  config_store.py  feeds.py  jobs_manager.py  models.py  post_cleanup.py  posts.py
src/app/routes/: auth_routes.py  config_routes.py  cost_routes.py  feed_routes.py  post_routes.py
src/app/writer/: executor.py
src/app/writer/actions/: __init__.py  cleanup.py  feeds.py  jobs.py  processor.py
src/audio/: mod.rs
src/auth/: feed_tokens.rs  middleware.rs  mod.rs  rate_limiter.rs
src/classification/: classifier.rs  cue_detector.rs  mod.rs  oneshot.rs
src/db/: mod.rs  models.rs  queries.rs  session_store.rs
src/feeds/: generator.rs  mod.rs  parser.rs  refresh.rs
src/jobs/: manager.rs  mod.rs  pipeline.rs  scheduler.rs
src/migrations/versions/: 16724c87ef43_add_user_ad_detection_strategy_and_.py  3e5eebc6b3b1_migration.py  4f9b2a6c8e11_move_oneshot_and_strategy_to_global_settings.py  4fbeddeb6a6c_costs.py  7033e6931510_migration.py  8a4d0c2f3e91_feed_last_changed_at.py  b7d3a1f2c456_add_speaker_and_audio_segment.py  cdd15af70147_make_feed_ad_detection_strategy_nullable.py  d4e7f8a9b2c1_scope_post_guid_and_download_url_per_feed.py
src/podcast_processor/: audio_processor.py  chapter_fallback.py  chapter_writer.py  ina_client.py  model_output.py  oneshot_classifier.py  oneshot_output.py  podcast_processor.py  prompt.py  stream_builder.py  transcribe.py  transcription_manager.py  word_boundary_refiner.py
src/refinement/: mod.rs
src/shared/: config.py  defaults.py  llm_utils.py
src/tests/: test_ad_classifier.py  test_audio_processor.py  test_chapter_fallback.py  test_chapter_writer.py  test_cleanup_requeue_and_cancel.py  test_config_error_handling.py  test_env_var_authority.py  test_feed_etag.py  test_feed_routes_settings.py  test_feeds.py  test_oneshot_classifier.py  test_podcast_processor_cleanup.py  test_podcast_processor_llm_chapter_toggle.py  test_podcast_processor_strategy.py  test_post_cleanup.py  test_post_routes.py  test_posts.py  test_session_auth.py  test_transcription_manager.py  test_writer_cleanup_actions.py  test_writer_jobs_actions.py
src/transcription/: groq.rs  local.rs  mod.rs  remote.rs
(+4 files in other folders)
