[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "podly-pure-podcasts"
version = "0.0.0"
description = "Ad-block for podcasts. Create an ad-free RSS feed."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "speechrecognition",
    "openai",
    "python-dotenv",
    "jinja2",
    "flask",
    "pyrss2gen",
    "feedparser",
    "certifi",
    "cd",
    "pyyaml",
    "prompt-toolkit",
    "pypodcastparser",
    "werkzeug",
    "exceptiongroup",
    "zeroconf",
    "waitress",
    "validators",
    "beartype",
    "openai-whisper",
    "flask-sqlalchemy",
    "flask-migrate",
    "Flask-APScheduler",
    "ffmpeg-python",
    "litellm",
    "bleach",
    "types-bleach",
    "groq",
    "async_timeout",
    "pytest-cov",
    "flask-cors",
    "bcrypt",
    "httpx-aiohttp",
    "stripe",
    "mutagen",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-pyyaml",
    "types-requests",
    "types-waitress",
    "pylint",
    "pytest",
    "dill",
    "types-flask-migrate",
    "pytest-mock",
    "watchdog",
    "requests",
    "types-flask-cors",
]

[tool.pylint]
init-hook = 'import sys; sys.path.append("./src")'

disable = [
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
    "line-too-long",
    "too-many-return-statements"
]

[tool.mypy]
warn_unused_ignores = true
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
norecursedirs = ["scripts", "scripts/*", ".worktrees", ".worktrees/*"]
testpaths = []  # No test paths - tests converted to standalone scripts

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
